wp-content/themes/sixgill/less/desktop_home.less
/* Home desktop styles */

.home {

	&-learn-more-link {
		display: block;
	  position: absolute;
	  bottom: 38px;
		left: 0px;
	  width: 100%;
	}

	&-section {
		min-height: 100vh !important;
		height: auto !important;
	}

	&-first-section {
		justify-content: center;
		z-index: 2;
		position: relative;
		height: 100vh !important;
		min-height: 500px !important;

		&-video {
			position: absolute;
			right: 0;
			bottom: 0;
			top: 0;
			right: 0;
			min-width: 100%;
			min-height: 100%;
			width: auto;
			height: auto;
			background-size: 100% 100%;
			background-image: url("/wp-content/themes/sixgill/images/home/desktop_video_placeholder.jpg");
			background-position: center center;
			background-size: cover;
			object-fit: cover; /*cover video background */
			z-index: 0;
		}

		&, &-block {

			display: flex;
		}

		&-block {
			position: relative;
			&, &-text {
				z-index: auto;
				align-self: center;
				text-align: center;
				display: inline-block;
			}
		}

		&-block {
			align-items: center;
			width: 100%;

			&-text {
				z-index: auto;
				width: 100%;
			}
		}

		&-text {
			letter-spacing: 1.6px;
			&, & p {
				z-index: 2;
				font-size: 32px;
				font-weight: 900;
				line-height: 1;
				margin-bottom: 42px;
				text-shadow: 0 0 20px #000000, 0 0 20px #000000, 0 0 20px #000000;
			}
		}

		&-scroll-link {

			&-wrapper {
				z-index: 3;
			}

			&-text {
				font-size: 17px;
	    	margin-bottom: 16px;
	    	text-shadow: -3.1px 3.9px 12px #000000, -3.1px 3.9px 12px #000000;
			}

			&-ico-wrapper {
				width: 37px;
				height: 18px;
				text-align: center;
			}
		}
	}


	&-second-section {
		background-image: url("/wp-content/themes/sixgill/images/home/second_section_bg_desktop.png");

	  &-wrapper {
			width: 74.5%;
			margin: 2vw 0px 2vw 0px;
	  }

		&-header {

			&-wrapper {
		  }

		  &-top {
				font-size: 22px;
				margin-bottom: 21px;

		    &-line {
		    }

		    &-title {
	    		white-space: nowrap;
					margin: 0px 8px 0px 8px;
		    }
		  }
		}



	  &-title {
			font-size: 4.15vw;
			line-height: 8.67vh;
			letter-spacing: 0.102vw;
			text-align: center;
			margin-bottom: 12px;
	  }

	  &-subtitle {
			font-size: 19px;
			margin-bottom: 26px;
	  }

	  &-content-wrapper {

	  }

		&-row {
			width: 100%;

			&:first-child {
				min-height: 190px;
			}

			&:last-child p {
				margin-bottom: 0px !important;
			}
		}

		&-block {
			width: 45.5%;
			display: flex;
			flex-direction: row;
			justify-content: space-between;

			&:first-child {
				float: left;
			}

			&:last-child {
				float: right;
			}

			&-title {
				margin-top: -0.3em;
				margin-bottom: 0px;
			}

			&-content {
				width: calc(~"100% - 5.1vw");
			}
		}

		&-icon-wrapper {
			width: 3.33vw;
			height: 3.33vw;
		}

		&-icon {

		}
	}

	&-third-section {
		display: flex;
    align-items: center;
    justify-content: center;
		background-image: url('/wp-content/themes/sixgill/images/home/dots_bg_desktop.png');
		background-size: contain;
		background-repeat: repeat;

		&-wrapper {
			max-width: 80%;
			text-align: center;
			margin: 2vw 0px 2vw 0px;
		}

		&-title {
			display: inline-block;
			width: 77%;
			font-size: 24px;
			margin-bottom: 4vh;
			line-height: 1.25em;
			letter-spacing: 1.2px;
		}

		&-image-wrapper {
			margin-bottom: 3vh;
		}

		&-image {

		}

		&-bottom-part {
			&-wrapper {
				display: inline-block;
				width: 55%;
				text-align: center;
			}

			&-text {
				font-size: 16px;
				margin-bottom: 2vw;
			}
		}

		&-button {

		}
	}

	&-fourth-section {
		display: flex;
		align-items: center;
		flex-direction: column;
		justify-content: center;

		background-image: url("/wp-content/themes/sixgill/images/home/second_section_bg_desktop.png");

		&-wrapper {
			text-align: center;
			margin: 2vw 0px 2vw 0px;
		}

		&-header-wrapper {
			display: inline-block;
			width: 64vw;
			margin-bottom: 0px;
		}

		&-title {
			font-size: 30px;
			margin: 0px auto 10px;
		}

		&-subtitle {
			font-size: 16px;
			letter-spacing: 0.9px;
			margin-bottom: 2vw;
		}

		&-link {
			font-size: 18px;
			letter-spacing: 0.9px;
		}

		&-carousel {
			width: 768px;
			margin: 61px auto 0;

			&-wrapper {

			}

			&-slide {
				&:hover .home-fourth-section-carousel-image-wrapper{
					height: 0;
				}
			}

			&-image-wrapper {

			}

			&-text {
				&-wrapper {

				}

				&-caption {

					&-wrapper {

					}
				}

				&-content {

					&-wrapper {

					}

					&-line {

					}
				}
			}

			&-link-more {

			}
		}
	}

	&-fifth-section {

		display: flex;
		align-items: center;
		justify-content: center;
		padding-bottom: 146px;

		&-wrapper {
			display: flex;
			align-items: center;
			flex-direction: column;
			margin: 2vw 0px 2vw 0px;
		}

		&-header-wrapper {
			display: flex;
			align-items: center;
			flex-direction: column;
			margin-bottom: 3vw;
			width: 51vw;
		}

		&-dash {
			margin: 1vh 0px 4vh 0px;
		}

		&-title {
			font-size: 24px;
			margin-bottom: 0px;
		}

		&-subtitle {
			font-size: 16px;
		}

		&-logo {
			display: inline-block;
			width: 80%;
			margin-bottom: 7vh;

			&-wrapper {
				display: inline-block;
				width: 20%;
				text-align: center;
			}

			&s-wrapper {
				font-size: 0px;
				width: 49vw;
			}
		}
	}
}

#fp-nav {
	& ul {

		& li {
			width: 16px;
			height: 16px;

			& a {

				& span {
					background-color: rgba(0,0,0,0);
					width: 16px !important;
					height: 16px !important;
					border: 2px solid #dfdfdf;
					-webkit-border-radius:8px;
					-moz-border-radius:8px;
				}

				& span.bullet-color {
					display: none;
				}

				&.active,
				&:hover {
					& span {
						border: 3px solid #4ddb5a;
						margin: -2px 0 0 -2px !important;
					}
				}
			}
		}
	}
}

#fullpage-wrapper {
	position: relative;
}

#home-fullpage-wrapper #footer {
	position: absolute;
	bottom: 0px;
	left: 0px;
	right: 0px;
}

